# malifar

./: .gitignore  Dockerfile  LICENSE  README.md  base32hex.py  cache.py  config.py  crackserver.py  dumper.py  fastdns.py  haptool.py  nsec3hash.cl  nsec3hash.py  probe_nameservers.py  requirements.txt  run_docker.sh  sha1.cl  tests.py
hap/: CMakeLists.txt  libhap.c  libhap.h  libhap.hpp  libhap.i
